fix: make Pokemon stats bars responsive in detail view on small screens

--- a/assets/styles/queries.css
+++ b/assets/styles/queries.css
@@ -45,6 +45,10 @@
         gap: 16px;
     }
 
+    #detail-info-container {
+        padding: 6;
+    }
+
     .footer-container {
         padding-left: 8px;
         padding-right: 8px;
@@ -63,5 +67,19 @@
         width: 100%;
         height: 100%;
         display: flex;
+    }
+}
+
+@media(max-width: 400px) {
+    .dialog {
+        max-width: 95vw;
+    }
+
+    .range {
+        width: 65%;
+    }
+
+    .info-label {
+        width: unset;
     }
 }
